--- a/index.html
+++ b/index.html
@@ -22,102 +22,102 @@
         </div>
     </div>
     <div class="main">
-        <iframe src="https://kyst.null.fit/game/learn/exam8.html" name="preview" width="100%" height="100%" frameborder="no"></iframe>
+        <iframe src="/learn/exam8.html" name="preview" width="100%" height="100%" frameborder="no"></iframe>
     </div>
 
     <script>
         document.getElementById('list').innerHTML = [
-            ["http://kyst.null.fit/game/fruit/", "切水果"],
-            ["http://kyst.null.fit/game/plane/", "打飞机"],
-            ["http://kyst.null.fit/game/flappybird/", "Flappybird"],
-            ["http://kyst.null.fit/game/2048", "2048"],
-            ["http://kyst.null.fit/game/candytbc", "怪物要糖果(中间版)"],
-            ["http://kyst.null.fit/game/candy", "怪物要糖果"],
-            ["http://kyst.null.fit/game/stardog", "星星狗"],
-            ["http://kyst.null.fit/game/run", "跑男"],
-            ["http://kyst.null.fit/game/blockdown", "掉方块"],
-            ["http://kyst.null.fit/game/breaklovers", "拆散小情侣"],
-            ["http://kyst.null.fit/game/puzzle", "拼图"],
-            ["http://kyst.null.fit/game/hitball", "弹珠儿"],
-            ["http://kyst.null.fit/game/quitsmoke", "别抽烟"],
-            ["http://kyst.null.fit/game/circlepath", "往上走"],
-            ["http://kyst.null.fit/game/downfloor", "下楼"],
-            ["http://kyst.null.fit/game/rpgdemo", "RPG小游戏"],
-            ["http://kyst.null.fit/game/kupao", "酷跑"],
-            ["http://kyst.null.fit/game/kite", "风筝"],
-            ["http://kyst.null.fit/game/nail", "别碰钉子"],
-            ["http://kyst.null.fit/game/fubag", "接福袋"],
-            ["http://kyst.null.fit/game/bike", "骑单车"],
-            ["http://kyst.null.fit/game/fctank", "FC坦克大战"],
-            ["http://kyst.null.fit/game/tank", "坦克大战"],
-            ["http://kyst.null.fit/game/getcockscomb", "接鸡冠"],
-            ["http://kyst.null.fit/game/marathon", "社区跑"],
-            ["http://kyst.null.fit/game/collectstar", "接星星"],
-            ["http://kyst.null.fit/game/donottapwhitetile", "别踩白块儿"],
-            ["http://kyst.null.fit/game/dragandmatch", "拖一拖"],
-            ["http://kyst.null.fit/game/fifty", "看谁能坚持50秒"],
-            ["http://kyst.null.fit/game/findpath", "自动寻路示例"],
-            ["http://kyst.null.fit/game/hearthstone", "炉石传说"],
-            ["http://kyst.null.fit/game/ballgame", "撞球"],
-            ["http://kyst.null.fit/game/shoot", "射击大战"],
-            ["http://kyst.null.fit/game/susliks", "打地鼠"],
-            ["http://kyst.null.fit/game/pixelstar", "像素接星星"],
-            ["http://kyst.null.fit/game/memory", "记忆翻牌游戏"],
-            ["http://kyst.null.fit/game/tacit", "默契"],
-            ["http://kyst.null.fit/game/blindmoon", "盲月AVG"],
-            ["http://kyst.null.fit/game/dinosaur", "恐龙"],
-            ["http://kyst.null.fit/game/simplechess", "简易下棋游戏"],
-            ["http://kyst.null.fit/game/pacman", "吃豆子"],
-            ["http://kyst.null.fit/game/randomdungeon", "随机生成地图"],
-            ["http://kyst.null.fit/game/justshoot", "燕澜七缙"],
-            ["http://kyst.null.fit/game/magicplain", "炸弹人"],
-            ["http://kyst.null.fit/game/russianblock", "俄罗斯方块"],
-            ["http://kyst.null.fit/game/starship", "星球飞船"],
-            ["http://kyst.null.fit/game/minorminer", "小矿工"],
-            ["http://kyst.null.fit/game/shenjingmao", "围住神经猫"],
-            ["http://kyst.null.fit/game/jump", "往上跳"],
-            ["http://kyst.null.fit/game/prize", "抽奖"],
-            ["http://kyst.null.fit/game/eliminate", "英雄消消乐"],
-            ["http://kyst.null.fit/game/swordart", "刀剑圣域"],
-            ["http://kyst.null.fit/game/catapult", "横版弹弓游戏"],
-            ["http://kyst.null.fit/game/lottery", "飞禽走兽彩票demo"],
-            ["http://kyst.null.fit/game/rhythm", "赝品节奏大师"],
-            ["http://kyst.null.fit/game/snap", "汽车抓拍"],
-            ["http://kyst.null.fit/game/charge", "不充不行"],
-            ["http://kyst.null.fit/game/runrobot", "机器人向前冲"],
-            ["http://kyst.null.fit/game/allalive", "一个都不能死"],
-            ["http://kyst.null.fit/game/skeletonguard", "骷髅防塔"],
-            ["http://kyst.null.fit/game/wipeglass", "擦玻璃"],
-            ["http://kyst.null.fit/game/seckill", "秒杀奇侠传"],
-            ["http://kyst.null.fit/game/timberpig", "伐木猪"],
-            ["http://kyst.null.fit/game/rocket", "火箭飞升"],
-            ["http://kyst.null.fit/game/doudizhu/build", "尖峰斗地主"],
-            ["http://kyst.null.fit/game/jumpone", "跳一跳"],
-            ["http://kyst.null.fit/game/maze", "迷宫"],
-            ["http://kyst.null.fit/game/eatball", "大球吃小球"],
-            ["http://kyst.null.fit/game/fruitwar", "水果大战"],
-            ["http://kyst.null.fit/game/unforgetday", "难忘的一天"],
-            ["http://kyst.null.fit/game/legendofwolf", "狼的传说"],
-            ["http://kyst.null.fit/game/twowar", "双王争霸"],
-            ["http://kyst.null.fit/game/learn3", "Phaser3入门案例"],
-            ["http://kyst.null.fit/game/flappybird3", "Flappybird"],
-            ["http://kyst.null.fit/game/breakout3", "打砖块"],
-            ["http://kyst.null.fit/game/knifehit3", "飞刀"],
-            ["http://kyst.null.fit/game/bottle3", "掉瓶子"],
-            ["http://kyst.null.fit/game/p2ball", "p2物理弹球"],
-            ["http://kyst.null.fit/game/40963", "4096"],
-            ["http://kyst.null.fit/game/getcoins3", "接金币"],
-            ["http://kyst.null.fit/game/hitgraywolf3", "锅打灰太狼"],
-            ["http://kyst.null.fit/game/quickrush3", "快跑RUSH"],
-            ["http://kyst.null.fit/game/petparty", "蛋蛋派"],
-            ["http://kyst.null.fit/game/manna", "天降福运"],
-            ["http://kyst.null.fit/game/scaldfish", "灯笼高高挂"],
-            ["http://kyst.null.fit/game/getthestarforyou", "为你摘星星"],
-            ["http://kyst.null.fit/game/attackonball/", "Attack On Ball"],
-            ["http://kyst.null.fit/game/mota/", "魔塔"],
-            ["http://kyst.null.fit/game/arpg/", "ARPG"],
-            ["http://kyst.null.fit/game/jokingyou/", "逗你玩"],
-            ["http://kyst.null.fit/game/planewar/", "飞机大战"],
+            ["/fruit/", "切水果"],
+            ["/plane/", "打飞机"],
+            ["/flappybird/", "Flappybird"],
+            ["/2048", "2048"],
+            ["/candytbc", "怪物要糖果(中间版)"],
+            ["/candy", "怪物要糖果"],
+            ["/stardog", "星星狗"],
+            ["/run", "跑男"],
+            ["/blockdown", "掉方块"],
+            ["/breaklovers", "拆散小情侣"],
+            ["/puzzle", "拼图"],
+            ["/hitball", "弹珠儿"],
+            ["/quitsmoke", "别抽烟"],
+            ["/circlepath", "往上走"],
+            ["/downfloor", "下楼"],
+            ["/rpgdemo", "RPG小游戏"],
+            ["/kupao", "酷跑"],
+            ["/kite", "风筝"],
+            ["/nail", "别碰钉子"],
+            ["/fubag", "接福袋"],
+            ["/bike", "骑单车"],
+            ["/fctank", "FC坦克大战"],
+            ["/tank", "坦克大战"],
+            ["/getcockscomb", "接鸡冠"],
+            ["/marathon", "社区跑"],
+            ["/collectstar", "接星星"],
+            ["/donottapwhitetile", "别踩白块儿"],
+            ["/dragandmatch", "拖一拖"],
+            ["/fifty", "看谁能坚持50秒"],
+            ["/findpath", "自动寻路示例"],
+            ["/hearthstone", "炉石传说"],
+            ["/ballgame", "撞球"],
+            ["/shoot", "射击大战"],
+            ["/susliks", "打地鼠"],
+            ["/pixelstar", "像素接星星"],
+            ["/memory", "记忆翻牌游戏"],
+            ["/tacit", "默契"],
+            ["/blindmoon", "盲月AVG"],
+            ["/dinosaur", "恐龙"],
+            ["/simplechess", "简易下棋游戏"],
+            ["/pacman", "吃豆子"],
+            ["/randomdungeon", "随机生成地图"],
+            ["/justshoot", "燕澜七缙"],
+            ["/magicplain", "炸弹人"],
+            ["/russianblock", "俄罗斯方块"],
+            ["/starship", "星球飞船"],
+            ["/minorminer", "小矿工"],
+            ["/shenjingmao", "围住神经猫"],
+            ["/jump", "往上跳"],
+            ["/prize", "抽奖"],
+            ["/eliminate", "英雄消消乐"],
+            ["/swordart", "刀剑圣域"],
+            ["/catapult", "横版弹弓游戏"],
+            ["/lottery", "飞禽走兽彩票demo"],
+            ["/rhythm", "赝品节奏大师"],
+            ["/snap", "汽车抓拍"],
+            ["/charge", "不充不行"],
+            ["/runrobot", "机器人向前冲"],
+            ["/allalive", "一个都不能死"],
+            ["/skeletonguard", "骷髅防塔"],
+            ["/wipeglass", "擦玻璃"],
+            ["/seckill", "秒杀奇侠传"],
+            ["/timberpig", "伐木猪"],
+            ["/rocket", "火箭飞升"],
+            ["/doudizhu/build", "尖峰斗地主"],
+            ["/jumpone", "跳一跳"],
+            ["/maze", "迷宫"],
+            ["/eatball", "大球吃小球"],
+            ["/fruitwar", "水果大战"],
+            ["/unforgetday", "难忘的一天"],
+            ["/legendofwolf", "狼的传说"],
+            ["/twowar", "双王争霸"],
+            ["/learn3", "Phaser3入门案例"],
+            ["/flappybird3", "Flappybird"],
+            ["/breakout3", "打砖块"],
+            ["/knifehit3", "飞刀"],
+            ["/bottle3", "掉瓶子"],
+            ["/p2ball", "p2物理弹球"],
+            ["/40963", "4096"],
+            ["/getcoins3", "接金币"],
+            ["/hitgraywolf3", "锅打灰太狼"],
+            ["/quickrush3", "快跑RUSH"],
+            ["/petparty", "蛋蛋派"],
+            ["/manna", "天降福运"],
+            ["/scaldfish", "灯笼高高挂"],
+            ["/getthestarforyou", "为你摘星星"],
+            ["/attackonball/", "Attack On Ball"],
+            ["/mota/", "魔塔"],
+            ["/arpg/", "ARPG"],
+            ["/jokingyou/", "逗你玩"],
+            ["/planewar/", "飞机大战"],
         ].map(function(item) {
             return '<li><a href="' + item[0] + '" target="preview">' + item[1] + '</a></li>';
         }).join('');
