--- a/index.html
+++ b/index.html
@@ -22,102 +22,102 @@
         </div>
     </div>
     <div class="main">
-        <iframe src="/learn/exam8.html" name="preview" width="100%" height="100%" frameborder="no"></iframe>
+        <iframe src="/game/learn/exam8.html" name="preview" width="100%" height="100%" frameborder="no"></iframe>
     </div>
 
     <script>
         document.getElementById('list').innerHTML = [
-            ["/fruit/", "切水果"],
-            ["/plane/", "打飞机"],
-            ["/flappybird/", "Flappybird"],
-            ["/2048", "2048"],
-            ["/candytbc", "怪物要糖果(中间版)"],
-            ["/candy", "怪物要糖果"],
-            ["/stardog", "星星狗"],
-            ["/run", "跑男"],
-            ["/blockdown", "掉方块"],
-            ["/breaklovers", "拆散小情侣"],
-            ["/puzzle", "拼图"],
-            ["/hitball", "弹珠儿"],
-            ["/quitsmoke", "别抽烟"],
-            ["/circlepath", "往上走"],
-            ["/downfloor", "下楼"],
-            ["/rpgdemo", "RPG小游戏"],
-            ["/kupao", "酷跑"],
-            ["/kite", "风筝"],
-            ["/nail", "别碰钉子"],
-            ["/fubag", "接福袋"],
-            ["/bike", "骑单车"],
+            ["/game/fruit/", "切水果"],
+            ["/game/plane/", "打飞机"],
+            ["/game/flappybird/", "Flappybird"],
+            ["/game/2048", "2048"],
+            ["/game/candytbc", "怪物要糖果(中间版)"],
+            ["/game/candy", "怪物要糖果"],
+            ["/game/stardog", "星星狗"],
+            ["/game/run", "跑男"],
+            ["/game/blockdown", "掉方块"],
+            ["/game/breaklovers", "拆散小情侣"],
+            ["/game/puzzle", "拼图"],
+            ["/game/hitball", "弹珠儿"],
+            ["/game/quitsmoke", "别抽烟"],
+            ["/game/circlepath", "往上走"],
+            ["/game/downfloor", "下楼"],
+            ["/game/rpgdemo", "RPG小游戏"],
+            ["/game/kupao", "酷跑"],
+            ["/game/kite", "风筝"],
+            ["/game/nail", "别碰钉子"],
+            ["/game/fubag", "接福袋"],
+            ["/game/bike", "骑单车"],
             ["/fctank", "FC坦克大战"],
-            ["/tank", "坦克大战"],
-            ["/getcockscomb", "接鸡冠"],
-            ["/marathon", "社区跑"],
-            ["/collectstar", "接星星"],
-            ["/donottapwhitetile", "别踩白块儿"],
-            ["/dragandmatch", "拖一拖"],
-            ["/fifty", "看谁能坚持50秒"],
-            ["/findpath", "自动寻路示例"],
-            ["/hearthstone", "炉石传说"],
-            ["/ballgame", "撞球"],
-            ["/shoot", "射击大战"],
-            ["/susliks", "打地鼠"],
-            ["/pixelstar", "像素接星星"],
-            ["/memory", "记忆翻牌游戏"],
-            ["/tacit", "默契"],
-            ["/blindmoon", "盲月AVG"],
-            ["/dinosaur", "恐龙"],
-            ["/simplechess", "简易下棋游戏"],
-            ["/pacman", "吃豆子"],
-            ["/randomdungeon", "随机生成地图"],
-            ["/justshoot", "燕澜七缙"],
-            ["/magicplain", "炸弹人"],
-            ["/russianblock", "俄罗斯方块"],
-            ["/starship", "星球飞船"],
-            ["/minorminer", "小矿工"],
-            ["/shenjingmao", "围住神经猫"],
-            ["/jump", "往上跳"],
-            ["/prize", "抽奖"],
-            ["/eliminate", "英雄消消乐"],
-            ["/swordart", "刀剑圣域"],
-            ["/catapult", "横版弹弓游戏"],
-            ["/lottery", "飞禽走兽彩票demo"],
-            ["/rhythm", "赝品节奏大师"],
-            ["/snap", "汽车抓拍"],
-            ["/charge", "不充不行"],
-            ["/runrobot", "机器人向前冲"],
-            ["/allalive", "一个都不能死"],
-            ["/skeletonguard", "骷髅防塔"],
-            ["/wipeglass", "擦玻璃"],
-            ["/seckill", "秒杀奇侠传"],
+            ["/game/tank", "坦克大战"],
+            ["/game/getcockscomb", "接鸡冠"],
+            ["/game/marathon", "社区跑"],
+            ["/game/collectstar", "接星星"],
+            ["/game/donottapwhitetile", "别踩白块儿"],
+            ["/game/dragandmatch", "拖一拖"],
+            ["/game/fifty", "看谁能坚持50秒"],
+            ["/game/findpath", "自动寻路示例"],
+            ["/game/hearthstone", "炉石传说"],
+            ["/game/ballgame", "撞球"],
+            ["/game/shoot", "射击大战"],
+            ["/game/susliks", "打地鼠"],
+            ["/game/pixelstar", "像素接星星"],
+            ["/game/memory", "记忆翻牌游戏"],
+            ["/game/tacit", "默契"],
+            ["/game/blindmoon", "盲月AVG"],
+            ["/game/dinosaur", "恐龙"],
+            ["/game/simplechess", "简易下棋游戏"],
+            ["/game/pacman", "吃豆子"],
+            ["/game/randomdungeon", "随机生成地图"],
+            ["/game/justshoot", "燕澜七缙"],
+            ["/game/magicplain", "炸弹人"],
+            ["/game/russianblock", "俄罗斯方块"],
+            ["/game/starship", "星球飞船"],
+            ["/game/minorminer", "小矿工"],
+            ["/game/shenjingmao", "围住神经猫"],
+            ["/game/jump", "往上跳"],
+            ["/game/prize", "抽奖"],
+            ["/game/eliminate", "英雄消消乐"],
+            ["/game/swordart", "刀剑圣域"],
+            ["/game/catapult", "横版弹弓游戏"],
+            ["/game/lottery", "飞禽走兽彩票demo"],
+            ["/game/rhythm", "赝品节奏大师"],
+            ["/game/snap", "汽车抓拍"],
+            ["/game/charge", "不充不行"],
+            ["/game/runrobot", "机器人向前冲"],
+            ["/game/allalive", "一个都不能死"],
+            ["/game/skeletonguard", "骷髅防塔"],
+            ["/game/wipeglass", "擦玻璃"],
+            ["/game/seckill", "秒杀奇侠传"],
             ["/timberpig", "伐木猪"],
-            ["/rocket", "火箭飞升"],
-            ["/doudizhu/build", "尖峰斗地主"],
-            ["/jumpone", "跳一跳"],
-            ["/maze", "迷宫"],
-            ["/eatball", "大球吃小球"],
-            ["/fruitwar", "水果大战"],
-            ["/unforgetday", "难忘的一天"],
-            ["/legendofwolf", "狼的传说"],
-            ["/twowar", "双王争霸"],
-            ["/learn3", "Phaser3入门案例"],
-            ["/flappybird3", "Flappybird"],
-            ["/breakout3", "打砖块"],
-            ["/knifehit3", "飞刀"],
-            ["/bottle3", "掉瓶子"],
-            ["/p2ball", "p2物理弹球"],
-            ["/40963", "4096"],
-            ["/getcoins3", "接金币"],
-            ["/hitgraywolf3", "锅打灰太狼"],
-            ["/quickrush3", "快跑RUSH"],
-            ["/petparty", "蛋蛋派"],
-            ["/manna", "天降福运"],
-            ["/scaldfish", "灯笼高高挂"],
-            ["/getthestarforyou", "为你摘星星"],
-            ["/attackonball/", "Attack On Ball"],
-            ["/mota/", "魔塔"],
-            ["/arpg/", "ARPG"],
-            ["/jokingyou/", "逗你玩"],
-            ["/planewar/", "飞机大战"],
+            ["/game/rocket", "火箭飞升"],
+            ["/game/doudizhu/build", "尖峰斗地主"],
+            ["/game/jumpone", "跳一跳"],
+            ["/game/maze", "迷宫"],
+            ["/game/eatball", "大球吃小球"],
+            ["/game/fruitwar", "水果大战"],
+            ["/game/unforgetday", "难忘的一天"],
+            ["/game/legendofwolf", "狼的传说"],
+            ["/game/twowar", "双王争霸"],
+            ["/game/learn3", "Phaser3入门案例"],
+            ["/game/flappybird3", "Flappybird"],
+            ["/game/breakout3", "打砖块"],
+            ["/game/knifehit3", "飞刀"],
+            ["/game/bottle3", "掉瓶子"],
+            ["/game/p2ball", "p2物理弹球"],
+            ["/game/40963", "4096"],
+            ["/game/getcoins3", "接金币"],
+            ["/game/hitgraywolf3", "锅打灰太狼"],
+            ["/game/quickrush3", "快跑RUSH"],
+            ["/game/petparty", "蛋蛋派"],
+            ["/game/manna", "天降福运"],
+            ["/game/scaldfish", "灯笼高高挂"],
+            ["/game/getthestarforyou", "为你摘星星"],
+            ["/game/attackonball/", "Attack On Ball"],
+            ["/game/mota/", "魔塔"],
+            ["/game/arpg/", "ARPG"],
+            ["/game/jokingyou/", "逗你玩"],
+            ["/game/planewar/", "飞机大战"],
         ].map(function(item) {
             return '<li><a href="' + item[0] + '" target="preview">' + item[1] + '</a></li>';
         }).join('');
