--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             ["/game/skeletonguard", "骷髅防塔"],
             ["/game/wipeglass", "擦玻璃"],
             ["/game/seckill", "秒杀奇侠传"],
-            ["/timberpig", "伐木猪"],
+            ["/timberpig/", "伐木猪"],
             ["/game/rocket", "火箭飞升"],
             ["/game/doudizhu/build", "尖峰斗地主"],
             ["/game/jumpone", "跳一跳"],
