--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             ["/game/nail", "别碰钉子"],
             ["/game/fubag", "接福袋"],
             ["/game/bike", "骑单车"],
-            ["/fctank", "FC坦克大战"],
+            ["/fctank/", "FC坦克大战"],
             ["/game/tank", "坦克大战"],
             ["/game/getcockscomb", "接鸡冠"],
             ["/game/marathon", "社区跑"],
